--- a/WebContent/manager_login.html
+++ b/WebContent/manager_login.html
@@ -14,7 +14,7 @@
 		</div>	
 		<div id="content" class="content">
 				<!-- 身份验证 -->
-				<form action="login" method="post" data-ajax="false">
+				<form action="mypage/login_login" method="post" data-ajax="false">
 					<label for="username">username:</label>
 					<input type="text" name="username" >
 					<label for="password">password:</label>
