--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,11 +3,10 @@
 <head>
 <title>LaoJiang</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="css/style1.css" rel="stylesheet" type="text/css" />
-
-<script type="text/javascript" src="js/cufon-yui.js"></script>
-<script type="text/javascript" src="js/arial.js"></script>
-<script type="text/javascript" src="js/cuf_run.js"></script>
+<link href="/LaoJiang/css/style1.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/LaoJiang/js/cufon-yui.js"></script>
+<script type="text/javascript" src="/LaoJiang/js/arial.js"></script>
+<script type="text/javascript" src="/LaoJiang/js/cuf_run.js"></script>
 <!-- CuFon ends -->
 </head>
 <body>
@@ -15,15 +14,15 @@
   <div class="header">
     <div class="header_resize">
       <div class="logo">
-        <h1><a href="index.html">Lao<span> Jiang</span></a><small>Life Study and Work</small></h1>
+        <h1><a href="/LaoJiang/mypage/page?page=home">Lao<span> Jiang</span></a><small>Life Study and Work</small></h1>
       </div>
       <div class="clr"></div>
       <div class="menu_nav">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/LaoJiang/mypage/page?page=home">Home</a></li>
           <li><a href="#">Support</a></li>
           <li><a href="#">About Us</a></li>
-          <li><a href="myarticle/myArticle_findAllOrderByDate">Blog</a></li>
+          <li><a href="/LaoJiang/myarticle/myArticle_findAllOrderByDate">Blog</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
        <div class="search">
@@ -31,7 +30,7 @@
           <span>
           <input name="q" type="text" class="keywords" id="textfield" maxlength="50" value="Search..." />
           
-          <input name="b" type="image" src="images/search.gif" class="button" />
+          <input name="b" type="image" src="/LaoJiang/images/search.gif" class="button" />
           </span>
         </form>
       </div>
@@ -48,7 +47,7 @@
           <h2><span>Template License</span></h2>
           <div class="clr"></div>
           <p>Posted on 18. Sep, 2015 by Sara in Filed under templates, internet,  with<a href="#"> Comments 18</a></p>
-          <img src="images/img_1.jpg" width="613" height="193" alt="image" />
+          <img src="/LaoJiang/images/img_1.jpg" width="613" height="193" alt="image" />
           <div class="clr"></div>
           <p>This is a free CSS website template by RocketWebsiteTemplates.com. This 
 work is distributed under the Creative Commons Attribution 3.0 License, 
@@ -60,7 +59,7 @@ which means that you are free to use it for any personal or commercial purpose p
           <h2><span>Aliquam Risus</span> Justo</h2>
           <div class="clr"></div>
           <p>Posted on 18. Sep, 2015 by Sara in Filed under templates, internet,  with  <a href="#">Comments 18</a></p>
-          <img src="images/img_2.jpg" width="613" height="193" alt="image" />
+          <img src="/LaoJiang/images/img_2.jpg" width="613" height="193" alt="image" />
           <div class="clr"></div>
           <p>Pellentesque posuere enim et ipsum dignissim convallis. Proin quis molestie mauris. Nunc eget quam at nulla tempus tincidunt quis a mi. Aliquam ornare turpis non tellus molestie imperdiet. Phasellus sit amet neque vitae purus venenatis hendrerit. Phasellus non mi ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse potenti. Aenean vel varius sapien. Etiam leo quam, sodales vel ullamcorper ut, viverra a risus.</p>
           <p>Maecenas dignissim mauris in arcu congue tincidunt. Vestibulum elit  nunc, accumsan vitae faucibus vel, scelerisque a quam. Aenean at metus id elit bibendum faucibus. Curabitur ultrices ante nec neque consectetur a aliquet libero lobortis. Ut nibh sem, pellentesque in dictum eu, convallis blandit erat. Cras vehicula tellus nec purus sagittis id scelerisque risus congue. Quisque sed semper massa. Donec id lacus mauris, vitae pretium risus. Fusce sed tempor erat. </p>
@@ -76,10 +75,10 @@ which means that you are free to use it for any personal or commercial purpose p
           <div class="clr"></div>
           <ul class="sb_menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">TemplateInfo</a></li>
-            <li><a href="#">Style Demo</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Archives</a></li>
+            <li><a href="#">Contact Us</a></li>
             <li><a href="#" title="Website Templates">Web Templates</a></li>
           </ul>
         </div>
@@ -104,7 +103,7 @@ which means that you are free to use it for any personal or commercial purpose p
         <div class="gadget">
           <h2>Wise Words</h2>
           <div class="clr"></div>
-          <p>   <img src="images/test_1.gif" alt="image" width="20" height="18" /> <em>We can let circumstances rule us, or we can take charge and rule our lives from within </em>.<img src="images/test_2.gif" alt="image" width="20" height="18" /></p>
+          <p>   <img src="/LaoJiang/images/test_1.gif" alt="image" width="20" height="18" /> <em>We can let circumstances rule us, or we can take charge and rule our lives from within </em>.<img src="/LaoJiang/images/test_2.gif" alt="image" width="20" height="18" /></p>
           <p style="float:right;"><strong>Earl Nightingale</strong></p>
           </div>
       </div>
@@ -115,7 +114,7 @@ which means that you are free to use it for any personal or commercial purpose p
     <div class="fbg_resize">
       <div class="col c1">
         <h2><span>Image Gallery</span></h2>
-        <a href="#"><img src="images/gallery_1.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="images/gallery_2.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="images/gallery_3.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="images/gallery_4.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="images/gallery_5.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="images/gallery_6.jpg" width="58" height="58" alt="pix" /></a> </div>
+        <a href="#"><img src="/LaoJiang/images/gallery_1.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="/LaoJiang/images/gallery_2.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="/LaoJiang/images/gallery_3.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="/LaoJiang/images/gallery_4.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="/LaoJiang/images/gallery_5.jpg" width="58" height="58" alt="pix" /></a> <a href="#"><img src="/LaoJiang/images/gallery_6.jpg" width="58" height="58" alt="pix" /></a> </div>
       <div class="col c2">
         <h2><span>Lorem Ipsum</span></h2>
         <p>Lorem ipsum dolor<br />
@@ -123,14 +122,14 @@ which means that you are free to use it for any personal or commercial purpose p
       </div>
       <div class="col c3">
         <h2><span>Contact</span></h2>
-        <p>Nullam quam lorem, tristique non vestibulum nec, consectetur in risus. Aliquam a quam vel leo gravida gravida eu porttitor dui. Nulla pharetra, mauris vitae interdum dignissim, justo nunc suscipit ipsum. <a href="#">mail@example.com</a><br />
-          <a href="#">+1 (123) 444-5677</a></p>
+        <p><a href="#">jiangnan@cttbj.com</a><br />
+          <a href="#">+(86)13911207566</a></p>
       </div>
       <div class="clr"></div>
     </div>
     <div class="footer">
-      <p class="lr">(c) Copyright <a href="#">MyWebSite</a>.</p>
-      <p class="lf"><a href="http://www.mycodes.net/" title="网站模板" target="_blank">网站模板</a></p>
+      <p class="lr">(c) Copyright <a href="#">LaoJiang</a>.</p>
+      <p class="lf"><a href="https://github.com/natejiang" title="MyGithub" target="_blank">MyGitHub</a></p>
       <div class="clr"></div>
     </div>
   </div>
